Fix style on mobile for content & adjacent posts

--- a/sass/components/_layout.scss
+++ b/sass/components/_layout.scss
@@ -6,7 +6,8 @@
 }
 
 .content {
-	padding: 48px 0;
+	padding-top: 48px;
+	padding-bottom: 48px;
 }
 .sidebar {
 	margin-top: 48px;
